rank computation, addition of angles to directionalizer